~~~~~~~~~~~~~~~~~~~~~~~~~~~

Changes to minimize reliance on determinants and characteristic
polynomials for existing material for eigenvalues and eigenvectors

*  Intersection and sum of subspaces eventually necessary for
proving properties of the algebraic multiplicity of an eigenvalue,
especially theorem relating dimensions
New: Theorem SIIS, Definition SOS, Theorem SSIS, Theorem SID


v X.XX
~~~~~~~~~~~~~~~~
New: Exercise PEE.T21, eigenvalue proof two ways
New: Exercise VS.T31, alternate proof of Theorem AISM
New: Theorem SIIS, intersection of subspaces
New: Definition SOS, Theorem SSIS, sum of subspaces
New: Exercise S.M40, union of subspaces is not a subspace
New: Theorem SID, dimensions of intersection and sum of subspaces
New: Exercise PD.T60, alternate solution using Theorem SID
Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
Edit: Theorem EDYES, substantially shorten proof
Edit: Exercise IVLT.T15, streamline solution
Edit: Clarify Example NSE (Katrina Hoefflinger)
Edit: Added missing Sage practice cell in Sage LI (Samuel Gonzalez)
Edit: Theorem PSPHS, proof missing "+" (Katrina Hoefflinger)
Edit: Fine-tune induction proof of Theorem EOMP
Edit: Expanded Example MWIAA
Edit: Solution MR.T80, added one step to proof (Zach Jarvis)
Edit: Definition SUV, harmonize with Definition IM (Nathan Schultz)
Edit: Example SCAD, take more care with "span" (Robert Dwyer)
Edit: Structure five solutions as "iff" proofs (Mira Schoeberlein)
Edit: Simplify Solution ILT.T10
Edit: Definition CM, improve matrix display (Carissa Riedesel)
Edit: Clean-up Exercise VS.M13 (Jasmine Mikesell)
Edit: Expand Solution IVLT.T40
Change: Streamline second half of the proof of Theorem BS
Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
Change: Theorems SSNS, BNS need case when n = r (Ken Price)
Change: Example NIDAU, in discussion, "are" to "is" (Lukas Karoly)
Change: Exercise LT.C43, clarify versions of the zero vector (Jake Rizzo)