@@ -251,12 +251,12 @@
             </proof>
         </theorem>
         <p>The proof of <xref ref="theorem-EMHE" acro="EMHE"/> is constructive (it contains an unambiguous procedure that leads to an eigenvalue), but it is not meant to be practical.  We will illustrate the theorem with an example, the purpose being to provide a companion for studying the proof and not to suggest this is the best procedure for computing an eigenvalue.</p>
-        <example xml:id="example-CAEHW" acro="CAEHW">
+        <example xml:id="example-CASE" acro="CASE">
             <idx>
                 <h>eigenvalue</h>
                 <h>existence</h>
             </idx>
-            <title>Computing an eigenvalue the hard way</title>
+            <title>Computing a single eigenvalue</title>
             <!-- [[-7, -1, 11, 0, -4], [4, 1, 0, 2, 0], [-10, -1, 14, 0, -4], [8, 2, -15, -1, 5], [-10, -1, 16, 0, -6]] -->
             <p>This example illustrates the proof of <xref ref="theorem-EMHE" acro="EMHE"/>, and so will employ the same notation as the proof <mdash/> look there for full explanations.  It is <em>not</em> meant to be a final example of a reasonable computational approach to finding eigenvalues and eigenvectors.  OK, warnings in place, here we go.</p>
             <p>Consider the matrix <m>A</m>, and choose the vector <m>\vect{x}</m>,<md>
@@ -1568,7 +1568,7 @@
         </exercise>
         <exercise number="M60" xml:id="exercise-EE-M60">
             <statement>
-                <p>Repeat <xref ref="example-CAEHW" acro="CAEHW"/> by choosing <m>\vect{x}=\colvector{0\\8\\2\\1\\2}</m> and then arrive at an eigenvalue and eigenvector of the matrix <m>A</m>.  The hard way.</p>
+                <p>Repeat <xref ref="example-CASE" acro="CASE"/> by choosing <m>\vect{x}=\colvector{0\\8\\2\\1\\2}</m> and then arrive at an eigenvalue and eigenvector of the matrix <m>A</m>.</p>
             </statement>
             <solution xml:id="solution-EE-M60">
                 <p>Form the matrix <m>C</m> whose columns are <m>\vect{x},\,A\vect{x},\,A^2\vect{x},\,A^3\vect{x},\,A^4\vect{x},\,A^5\vect{x}</m> and row-reduce the matrix,<me>\begin{bmatrix}
@@ -1586,7 +1586,7 @@
                  0 &amp; 0 &amp; 0 &amp; 0 &amp; 0 &amp; 0 \\
                  0 &amp; 0 &amp; 0 &amp; 0 &amp; 0 &amp; 0
                 \end{bmatrix}</me>.  The simplest possible relation of linear dependence on the columns of <m>C</m> comes from using scalars <m>\alpha_4=1</m> and <m>\alpha_5=\alpha_6=0</m> for the free variables in a solution to <m>\homosystem{C}</m>.  The remainder of this solution is <m>\alpha_1=3</m>, <m>\alpha_2=-1</m>, <m>\alpha_3=-3</m>.  This solution gives rise to the polynomial<me>p(x)=3-x-3x^2+x^3=(x-3)(x-1)(x+1)</me>which then has the property that <m>p(A)\vect{x}=\zerovector</m>.</p>
-                <p>No matter how you choose to order the factors of <m>p(x)</m>, the value of <m>k</m> (in the language of <xref ref="theorem-EMHE" acro="EMHE"/> and <xref ref="example-CAEHW" acro="CAEHW"/>) is <m>k=2</m>.  For each of the  three possibilities, we list the resulting eigenvector and the associated eigenvalue:<md>
+                <p>No matter how you choose to order the factors of <m>p(x)</m>, the value of <m>k</m> (in the language of <xref ref="theorem-EMHE" acro="EMHE"/> and <xref ref="example-CASE" acro="CASE"/>) is <m>k=2</m>.  For each of the  three possibilities, we list the resulting eigenvector and the associated eigenvalue:<md>
                     <mrow>(C-3I_5)(C-I_5)\vect{z}&amp;=\colvector{8\\8\\8\\-24\\8}&amp;\lambda&amp;=-1</mrow>
                     <mrow>(C-3I_5)(C+I_5)\vect{z}&amp;=\colvector{20\\-20\\20\\-40\\20}&amp;\lambda&amp;=1</mrow>
                     <mrow>(C+I_5)(C-I_5)\vect{z}&amp;=\colvector{32\\16\\48\\-48\\48}&amp;\lambda&amp;=3</mrow>
