@@ -536,7 +536,7 @@
             </proof>
         </theorem>
         <p><xref ref="example-SEE" acro="SEE"/>,
-        <xref ref="example-CAEHW" acro="CAEHW"/>,
+        <xref ref="example-CASE" acro="CASE"/>,
         <xref ref="example-ESMS3" acro="ESMS3"/>,
         <xref ref="example-ESMS4" acro="ESMS4"/>,
         <xref ref="example-DEMS5" acro="DEMS5"/>,
