@@ -11,6 +11,9 @@ proving properties of the algebraic multiplicity of an eigenvalue,
 especially theorem relating dimensions
 New: Theorem SIIS, Definition SOS, Theorem SSIS, Theorem SID
 
+*  Expand Example CAEHW and de-emphasize the notion that it is
+the "hard way" with a new title and acronym, now Example CASE.
+
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -46,6 +49,7 @@ Change: Solution SLT.C27, "are" to "is" (Ashlen Isbell)
 Change: Rename Theorem NPNT as Theorem NPNF (Sam Webb)
 Change: Streamline the proof of Theorem NPNF
 Change: Expand Example CAEHW
+Change: Re-title Example CAEHW to Example CASE
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
 Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
